paleta de colores y tipografia

--- a/css/plugins.css
+++ b/css/plugins.css
@@ -13,7 +13,7 @@
 @import 'meanmenu.css';
 @import 'slick.min.css';
 @import 'ionicons.css';
-@import 'cerebrisans.css';
+@import 'Encode Sans Expanded.css';
 @import 'comic_sans_ms.css';
 @import 'lauis.css';
 @import 'swiper.css';
