--- a/scss/components/_icon-boxes.scss
+++ b/scss/components/_icon-boxes.scss
@@ -316,7 +316,7 @@
         margin-bottom: 22px;
         & svg{
             *{
-                stroke: #68AE4A;
+                stroke: #249eda;
             }
         }
     }
@@ -382,7 +382,7 @@
             }
             p{
                 color: $white;
-                font-family: $CerebriSans;
+                font-family: $Encode Sans Expanded;
                 transition: all .3s cubic-bezier(.645,.045,.355,1);
             }
         }
