--- a/scss/components/_pricing-box.scss
+++ b/scss/components/_pricing-box.scss
@@ -156,7 +156,7 @@ Pricing Box
         line-height: 1.75;
         color: #777;
         a{
-            color: #68AE4A;
+            color: #249eda;
             position: relative;
             padding: 2px 0;
             overflow: hidden;
