--- a/scss/default/_shortcode.scss
+++ b/scss/default/_shortcode.scss
@@ -16,7 +16,7 @@
  font-family: 'Open Sans', sans-serif;
  font-family: 'Roboto', sans-serif;
  font-family: 'Reenie Beanie', cursive;
- font-family: 'CerebriSans';
+ font-family: 'Encode Sans Expanded';
  
  =================================================*/
 
@@ -216,8 +216,8 @@
     font-family: $roboto;
 }
 
-.CerebriSans-font{
-    font-family: $CerebriSans;
+.Encode Sans Expanded-font{
+    font-family: $Encode Sans Expanded;
     color: #777;
 }
 
@@ -265,7 +265,7 @@
 '21'#f5f3ef,
 '22'#f10,
 '23'#FBFBFD,
-'24'#68AE4A,
+'24'#249eda,
 '25'#BC9464,
 '26' #7BA100,
 '27' #14359E,
