--- a/scss/default/_variables.scss
+++ b/scss/default/_variables.scss
@@ -41,7 +41,7 @@ $secondary-font: 'Montserrat', sans-serif;
 $playfair-font: 'Playfair Display', serif;
 $Permanent-font: 'Permanent Marker', cursive;
 $roboto : 'Roboto', sans-serif;
-$CerebriSans:'CerebriSans';
+$Encode Sans Expanded:'Encode Sans Expanded';
 $comic-sans: 'Comic Sans MS';
 $spectral-font: 'Spectral', serif;
 
@@ -52,7 +52,7 @@ $font-3: 'Montserrat', sans-serif;
 $font-4: 'Playfair Display', serif;
 $font-5: 'Permanent Marker', cursive;
 $font-6: 'Roboto', sans-serif;
-$font-7: 'CerebriSans';
+$font-7: 'Encode Sans Expanded';
 $font-8: 'Comic Sans MS';
 // Template Font List
 $fontList: $font-1, $font-2, $font-3, $font-4, $font-5, $font-6, $font-7, $font-8;
@@ -93,7 +93,7 @@ $color-19:  #F12C6E;
 $color-20:  #CE8F4F;
 $color-21:  #FB6031;
 $color-22:  #A810E0;
-$color-23:  #68AE4A;
+$color-23:  #249eda;
 $color-24:  #BC9464;
 $color-25:  #9F3939;
 $color-26:  #7BA100;
