--- a/scss/elements/_contact.scss
+++ b/scss/elements/_contact.scss
@@ -95,19 +95,19 @@
         background: #f5f6fa !important;
         height: 50px !important;
         &:focus{
-            border: 1px solid #68AE4A !important;
+            border: 1px solid #249eda !important;
         }
     }
     textarea{
         border: 1px solid #f5f6fa !important;
         background: #f5f6fa !important;
         &:focus{
-            border: 1px solid #68AE4A !important;
+            border: 1px solid #249eda !important;
         }
     }
     input[type="submit"]{
-        border-color: #68AE4A !important;
-        background-color: #68AE4A !important;
+        border-color: #249eda !important;
+        background-color: #249eda !important;
         color: $white !important;
         border-radius: 0 !important;
     }
@@ -120,7 +120,7 @@
     color: #ffffff !important;
     border-color: #9F3939 !important;
     background-color: #9F3939 !important;
-    font-family: $CerebriSans !important;
+    font-family: $Encode Sans Expanded !important;
     font-size: 13px !important;
     font-weight: 500 !important;
     letter-spacing: 1px !important;
