--- a/scss/elements/_carousel-slider.scss
+++ b/scss/elements/_carousel-slider.scss
@@ -110,7 +110,7 @@
         font-size: 18px;
         line-height: 34px;
         color: $white;
-        font-family: $CerebriSans;
+        font-family: $Encode Sans Expanded;
         max-width: 610px;
         margin: 0 auto;
         margin-bottom: 40px;
