Cambios finales pre enviada a cliente

--- a/css/revoulation.css
+++ b/css/revoulation.css
@@ -23,7 +23,7 @@ website:   	http://www.themepunch.com
 #rev_slider_1_1 .brook .tp-bullet, #rev_slider_29_1 .brook .tp-bullet {
     display: inline-block;
     vertical-align: top;
-    font-family: 'Poppins';
+    font-family: 'Encode Sans Expanded';
     font-size: 18px;
     font-weight: 600;
     text-align: center;
@@ -40,7 +40,7 @@ website:   	http://www.themepunch.com
 }
 
 #rev_slider_1_1 h6.tp-caption {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Encode Sans Expanded', sans-serif;
 }
 
 
@@ -80,7 +80,7 @@ website:   	http://www.themepunch.com
 }
 
 #rev_slider_2_1 .tp-caption.rev-btn{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Encode Sans Expanded', sans-serif;
     font-weight: 500;
     transition: 0.5s !important;
 }
@@ -89,7 +89,7 @@ website:   	http://www.themepunch.com
 #rev_slider_2_1 .brook .tp-bullet {
     display: inline-block;
     vertical-align: top;
-    font-family: 'Poppins';
+    font-family: 'Encode Sans Expanded';
     font-size: 18px;
     font-weight: 600;
     text-align: center;
@@ -181,7 +181,7 @@ website:   	http://www.themepunch.com
 #rev_slider_5_1 .brook-03 .tp-bullet {
     display: inline-block;
     vertical-align: top;
-    font-family: 'poppins';
+    font-family: 'Encode Sans Expanded';
     font-size: 18px;
     font-weight: 600;
     text-align: center;
@@ -329,14 +329,14 @@ website:   	http://www.themepunch.com
 }
 
 #rev_slider_8_1 .tp-caption.body-font{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Encode Sans Expanded', sans-serif;
 }
 
 
 #rev_slider_8_1 .brook .tp-bullet {
     display: inline-block;
     vertical-align: top;
-    font-family: 'Poppins';
+    font-family: 'Encode Sans Expanded';
     font-size: 18px;
     font-weight: 600;
     text-align: center;
@@ -392,7 +392,7 @@ website:   	http://www.themepunch.com
 }
 
 #rev_slider_13_1_wrapper .tp-caption{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Encode Sans Expanded', sans-serif;
 }
 
 
