--- a/scss/default/_variables.scss
+++ b/scss/default/_variables.scss
@@ -35,7 +35,7 @@ $white:#fff;
 
 
 //===== Font Family =====//
-$body-font: 'Poppins', sans-serif;
+$body-font: 'Encode Sans Expanded', sans-serif;
 $heading-font: 'louis_george_caferegular';
 $secondary-font: 'Montserrat', sans-serif;
 $playfair-font: 'Playfair Display', serif;
@@ -46,7 +46,7 @@ $comic-sans: 'Comic Sans MS';
 $spectral-font: 'Spectral', serif;
 
 
-$font-1: 'Poppins', sans-serif;
+$font-1: 'Encode Sans Expanded', sans-serif;
 $font-2: 'louis_george_caferegular';
 $font-3: 'Montserrat', sans-serif;
 $font-4: 'Playfair Display', serif;
@@ -62,7 +62,7 @@ $fontList: $font-1, $font-2, $font-3, $font-4, $font-5, $font-6, $font-7, $font-
 
 
 /*================================================ 
- font-family: 'Poppins', sans-serif;
+ font-family: 'Encode Sans Expanded', sans-serif;
  font-family: 'Permanent Marker', cursive;
  font-family: 'Playfair Display', serif;
  font-family: 'Montserrat', sans-serif;
