--- a/scss/elements/_testimonial.scss
+++ b/scss/elements/_testimonial.scss
@@ -734,7 +734,7 @@ Testimonial Area
           margin-bottom: 6px;
           color: #fff;
           font-weight: 600;
-          font-family: "Poppins", sans-serif;
+          font-family: "Encode Sans Expanded", sans-serif;
         }
   
         span {
@@ -742,7 +742,7 @@ Testimonial Area
           font-weight: 500;
           line-height: 1.58;
           font-size: 18px;
-          font-family: "Poppins", sans-serif;
+          font-family: "Encode Sans Expanded", sans-serif;
         }
       }
     }
