--- a/scss/portfolio/_type-hover.scss
+++ b/scss/portfolio/_type-hover.scss
@@ -271,7 +271,7 @@
                     margin-bottom: 0;
                     -webkit-transition: all .3s cubic-bezier(.645,.045,.355,1);
                     transition: all .3s cubic-bezier(.645,.045,.355,1);
-                    font-family: Poppins, Helvetica, Arial, sans-serif;
+                    font-family: Encode Sans Expanded, Helvetica, Arial, sans-serif;
                     font-weight: 600;
 
                     @media #{$lg-layout} {
